Start working on frontend. Fixing CORS. Adding banner.

--- a/scontester_back/src/main/resources/application.properties
+++ b/scontester_back/src/main/resources/application.properties
@@ -6,7 +6,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+
+spring.banner.location=banner.txt
 
 #java home (need to execute java programs)
 JAVA=java
