--- a/scontester_back/src/main/resources/application.properties
+++ b/scontester_back/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.banner.location=banner.txt
 
+admin.password=change_it
+
 #java home (need to execute java programs)
 JAVA=java
 #javac home (need to compile java programs)
