Svelte migration. 1) Added time to process 2) Added checkUID for access 3) Start on working with delete method

--- a/scontester_front/package.json
+++ b/scontester_front/package.json
@@ -14,9 +14,14 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
+    "svelte": "^3.32.3"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0"
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.3.0",
+    "sirv-cli": "^1.0.0",
+    "svelte-spa-router": "^3.1.0",
+    "sveltestrap": "^3.13.0"
   }
 }
