Working on custom properties

--- a/scontester_back/build.gradle
+++ b/scontester_back/build.gradle
@@ -30,6 +30,13 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
+processResources {
+    copy {
+        from '../scontester_front/public/'
+        into 'src/main/resources/static/'
+    }
+}
+
 test {
     useJUnitPlatform()
 }
